# uncertainty_nav

./: .gitignore  LICENSE  README.md  reproduce.sh
experiments/results/: ensemble_cosine_similarity.json  inference_latency_cpu.json  temperature_scaling_mc_dropout.json
paper/: main.tex
scripts/ablation/: run_ablations.py
scripts/eval/: compute_auroc_ci.py  compute_cosine_similarity.py  compute_temperature_scaling.py  eval_all.sh  evaluate.py  measure_inference_latency.py  plot_results.py
scripts/train/: ppo_trainer.py
scripts/viz/: render_episode.py
src/uncertainty-nav/config/: train_ensemble_m1.yaml  train_ensemble_m4.yaml  train_ensemble_m7.yaml  train_ensemble_m8.yaml
src/uncertainty-nav/uncertainty-nav/: __init__.py  baselines.py  nav_env.py  particle_filter.py  particle_filter_node.py  rviz_uncertainty_node.py  uncertainty_agent_node.py
src/uncertainty-nav/urdf/: turtlebot3_waffle_pi_uncertainty.urdf.xacro
src/uncertainty_nav/: package.xml  setup.cfg  setup.py
src/uncertainty_nav/config/: train_ensemble.yaml  train_ensemble_m2.yaml  train_ensemble_m3.yaml  train_ensemble_m5.yaml  train_ensemble_m6.yaml  train_ensemble_m9.yaml  train_gru.yaml  train_large_mlp.yaml  train_lstm.yaml  train_vanilla.yaml  uncertainty_nav.rviz
src/uncertainty_nav/launch/: full_system.launch.py  train.launch.py
src/uncertainty_nav/uncertainty_nav/: baselines.py  mc_dropout.py  models.py  particle_filter.py  particle_filter_node.py
src/uncertainty_nav/urdf/: turtlebot3_waffle_pi_uncertainty.urdf.xacro
src/uncertainty_nav/worlds/: env_b.world
(+2 files in other folders)
