<?xml version="1.0"?>
<package format="3">
  <name>uncertainty_nav</name>
  <version>0.1.0</version>
  <description>Epistemic Uncertainty-Aware Navigation under Partial Observability — TurtleBot3</description>
  <maintainer email="newtonadhikari@example.com">Newton Adhikari</maintainer>
  <license>MIT</license>

  <!-- ROS2 core -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf_transformations</depend>

  <!-- TurtleBot3 -->
  <depend>turtlebot3_description</depend>
  <depend>turtlebot3_gazebo</depend>

  <!-- Gazebo / simulation -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>xacro</depend>

  <!-- Navigation -->
  <depend>nav2_msgs</depend>

  <!-- Build -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>